Fix some minor spacing issues on form elements

--- a/src/scss/3_components/form/form.scss
+++ b/src/scss/3_components/form/form.scss
@@ -65,13 +65,6 @@ form > .form-item,
   .fieldset-wrapper .field-prefix &,
   .fieldset-wrapper .field-suffix & {
     @include responsive-typo-map($body-text);
-  }
-
-  .fieldset-wrapper .field-prefix & {
-    margin: 0 0 1em;
-  }
-
-  .fieldset-wrapper .field-suffix & {
     margin: 1em 0 0;
   }
 }
@@ -264,7 +257,7 @@ textarea {
 
 // Based on https://css-tricks.com/styling-a-select-like-its-2019/
 .form-select {
-  display: block;
+  display: inline-block; /* inline-block ensures top and bottom margins aren't collapsed with parent container margins */
   font-size: 1em;
   font-family: sans-serif;
   font-weight: normal;
@@ -309,7 +302,7 @@ textarea,
 .form-type-checkbox {
   position: relative;
   width: 100%;
-  margin: .5em .5em .5em 0;
+  margin: .6667em .5em .3334em 0;
   padding: 0 33% 0 0; // Right padding makes room for error bubbles.
 
   .container-inline & {
