--- a/src/scss/init/_typography.scss
+++ b/src/scss/init/_typography.scss
@@ -130,8 +130,8 @@ $btn-large: (
 );
 
 $form-legend: (
-  null: (21px, 2.4rem, 0 0 .8rem),
-  lg: (24px, 3rem, 0 0 .9rem),
+  null: (21px, 2.4rem, 0 0 .2rem),
+  lg: (24px, 3rem, 0 0 .3rem),
   //xxl: (28px, 3rem, 0 0 2rem)
 );
 
